# scribepy

./: .gitignore  LICENSE  README  README.md  pyproject.toml
src/scribepy/: __init__.py  cli.py  connector.py  main.py  player.py  top.py
src/scribepy/gui/: browser.py  mainwindow.py  progressbar.py
src/scribepy/pybass/: pybass.py  pybass_aac.py  pybass_ac3.py  pybass_adx.py  pybass_aix.py  pybass_alac.py  pybass_ape.py  pybass_mpc.py  pybass_ofr.py  pybass_sfx.py  pybass_spx.py  pybass_tta.py  pybass_vst.py  pybassasio.py  pybassflac.py  pybassmidi.py  pybassmix.py  pybasswasapi.py  pybasswma.py  pyogginfo.py  pytags.py  test.py  wx_bass_control.py  wx_ctrl_phoenix.py
src/scribepy/pybass/tests/: test_Bass_ChannelSetSync.py  test_DX8_effect_handle.py  test_flac_linux.py  test_flac_win.py  test_pybassmix1.py  test_pybassmix2.py  test_unicode.py
src/scribepy/tui/: browser.py  mainwindow.py  progressbar.py
src/scribepy/tui/utils/: widgets.py
