[project]
name = "scribepy"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonnieey", email = "johnjahi55@gmail.com"},
]
dependencies = [
    "asciimatics~=1.13",
    "pynput~=1.7",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {file = "LICENSE"}

[tool.pdm.scripts]
scribepy = {call = "scribepy.cli:main"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
